# oraclexbt

./: .env.example  .gitignore  AUTOMATION_GUIDE.md  CODE_CHANGES.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  LIVE_TRADES_TERMINAL.md  MAINNET_DEPLOYMENT.md  PERSISTENT_SERVICE.md  PRODUCTION_DEPLOY.md  README.md  TRADING_TERMINAL.md  api_integration_guide.py  check_training.py  com.oraclexbt.agent.plist  config.yaml  config_loader.py  dashboard.py  docker-compose.yml  generate_sample_tweets.py  live_trades_terminal.py  logger.py  oracle_account_monitor.py  oracle_automation.py  oracle_dashboard.html  oracle_twitter_manager.py  post_tweet_now.py  pyproject.toml  quick_tweet.py  requirements-automation.txt  requirements-production.txt  requirements-trading.txt  requirements.txt  run_agent_all_day.py  run_oracle.sh  setup_persistent.sh  show_sample_tweets.py  start_all_day_trading.sh  start_trading.sh  (+5 more)
agent/: __init__.py  agent.py  analyzer.py  branding.py  cli.py  config.py  enhanced_prompts.py  knowledge.py  memory.py  prompts.py  tools.py  trading_tools.py  tweet_scheduler.py  twitter.py  twitter_tools.py
assets/: .gitkeep
blockchain/: __init__.py  contracts.py
core/: database.py  logger.py
data/: oraclexbt.db
docs/: AGENT_CAPABILITIES.md  ALL_DAY_TRADING_GUIDE.md  API_DOCUMENTATION.md  AUTOMATION_QUICKSTART.md  PERSISTENT_SERVICE.md  QUICK_REFERENCE.md  QUICK_REFERENCE.txt  TRADING_CONFIG.md  TRADING_QUICKSTART.md  TRADING_SYSTEM.md  WEB3_INTEGRATION_SUMMARY.md
examples/: agent_basic.py  agent_monitor.py  agent_providers.py  agent_streaming.py  agent_twitter.py  async_usage.py  basic_usage.py  trading_agent_demo.py
oraclyst_sdk/: __init__.py  client.py  config.py  exceptions.py  version.py
oraclyst_sdk/http/: __init__.py  async_client.py  base.py  sync_client.py
oraclyst_sdk/models/: __init__.py  common.py  history.py  markets.py  orderbook.py  ticker.py
scripts/: setup_trading.sh  start_automation.sh
templates/: index.html
tests/: test_basic.py
website/: README.md  docs.html  index.html  index_backup_v2.html  index_new.html
