[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oraclyst-sdk"
version = "1.0.0"
description = "Production-grade Python SDK for Oraclyst prediction market aggregation platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Oraclyst", email = "dev@oraclyst.app" }
]
keywords = [
    "prediction-markets",
    "polymarket",
    "kalshi",
    "trading",
    "api-client",
    "sdk"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
agent = [
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "tweepy>=4.14.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "aioresponses>=0.7.0",
    "responses>=0.23.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.0.0",
]
all = [
    "oraclyst-sdk[agent,dev,docs]",
]

[project.urls]
Homepage = "https://oraclyst.app"
Documentation = "https://docs.oraclyst.app/sdk/python"
Repository = "https://github.com/oraclyst/python-sdk"

[tool.hatch.build.targets.sdist]
include = [
    "/oraclyst_sdk",
    "/agent",
]

[tool.hatch.build.targets.wheel]
packages = ["oraclyst_sdk", "agent"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py39"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
